--- a/src/docs/getting-started/introduction.mdx
+++ b/src/docs/getting-started/introduction.mdx
@@ -22,6 +22,24 @@ Curabitur posuere placerat odio, a suscipit velit consectetur nec. Proin tincidu
 
 * * *
 
+<Preview>
+  <h1>The quick brown fox jumps over the lazy dog</h1>
+  <h2>The quick brown fox jumps over the lazy dog</h2>
+  <h3>The quick brown fox jumps over the lazy dog</h3>
+  <h4>The quick brown fox jumps over the lazy dog</h4>
+  <h5>The quick brown fox jumps over the lazy dog</h5>
+  <h6>The quick brown fox jumps over the lazy dog</h6>
+</Preview>
+
+<Pre className="language-html">
+  <h1>The quick brown fox jumps over the lazy dog</h1>
+  <h2>The quick brown fox jumps over the lazy dog</h2>
+  <h3>The quick brown fox jumps over the lazy dog</h3>
+  <h4>The quick brown fox jumps over the lazy dog</h4>
+  <h5>The quick brown fox jumps over the lazy dog</h5>
+  <h6>The quick brown fox jumps over the lazy dog</h6>
+</Pre>
+
 Phasellus vel tortor mi. Vivamus bibendum erat lacus, quis tincidunt urna dictum non. Fusce vel ex feugiat, faucibus lectus sit amet, accumsan lacus. Quisque cursus leo nunc, ut maximus arcu suscipit ut. Nulla laoreet felis mauris, quis facilisis urna aliquet ac. Ut ultricies eros pharetra, elementum urna non, mollis eros. Proin viverra, ipsum a laoreet laoreet, nunc erat pulvinar quam, vel vehicula enim nibh non velit.
 
 > “Two things are infinite: the universe and human stupidity; and I'm not sure about the universe.”
@@ -45,14 +63,14 @@ blockquote
 Defines a section that is quoted from another source
 
 *   Unordered List item one
-    *   Nested list item
-        *   Level 3, item one
-        *   Level 3, item two
-        *   Level 3, item three
-        *   Level 3, item four
-    *   List item two
-    *   List item three
-    *   List item four
+  *   Nested list item
+    *   Level 3, item one
+    *   Level 3, item two
+    *   Level 3, item three
+    *   Level 3, item four
+  *   List item two
+  *   List item three
+  *   List item four
 *   List item two
 *   List item three
 *   List item four
@@ -60,14 +78,14 @@ Defines a section that is quoted from another source
 * * *
 
 1.  List item one
+  1.  List item one
     1.  List item one
-        1.  List item one
-        2.  List item two
-        3.  List item three
-        4.  List item four
     2.  List item two
     3.  List item three
     4.  List item four
+  2.  List item two
+  3.  List item three
+  4.  List item four
 2.  List item two
 3.  List item three
 4.  List item four
