--- a/src/docs/getting-started/introduction.mdx
+++ b/src/docs/getting-started/introduction.mdx
@@ -22,14 +22,15 @@ Curabitur posuere placerat odio, a suscipit velit consectetur nec. Proin tincidu
 
 * * *
 
-<Preview>
-<h1>The quick brown fox jumps over the lazy dog</h1>
-<h2>The quick brown fox jumps over the lazy dog</h2>
-<h3>The quick brown fox jumps over the lazy dog</h3>
-<h4>The quick brown fox jumps over the lazy dog</h4>
-<h5>The quick brown fox jumps over the lazy dog</h5>
-<h6>The quick brown fox jumps over the lazy dog</h6>
-</Preview>
+<section className="preview">
+  <div className="preview__html">
+    <h1>h1: The quick brown fox jumps over the lazy dog</h1>
+    <h2>h2: The quick brown fox jumps over the lazy dog</h2>
+    <h3>h3: The quick brown fox jumps over the lazy dog</h3>
+    <h4>h4: The quick brown fox jumps over the lazy dog</h4>
+    <h5>h5: The quick brown fox jumps over the lazy dog</h5>
+    <h6>h6: The quick brown fox jumps over the lazy dog</h6>
+  </div>
 
 ```html
 <h1>The quick brown fox jumps over the lazy dog</h1>
@@ -39,6 +40,7 @@ Curabitur posuere placerat odio, a suscipit velit consectetur nec. Proin tincidu
 <h5>The quick brown fox jumps over the lazy dog</h5>
 <h6>The quick brown fox jumps over the lazy dog</h6>
 ```
+</section>
 
 Phasellus vel tortor mi. Vivamus bibendum erat lacus, quis tincidunt urna dictum non. Fusce vel ex feugiat, faucibus lectus sit amet, accumsan lacus. Quisque cursus leo nunc, ut maximus arcu suscipit ut. Nulla laoreet felis mauris, quis facilisis urna aliquet ac. Ut ultricies eros pharetra, elementum urna non, mollis eros. Proin viverra, ipsum a laoreet laoreet, nunc erat pulvinar quam, vel vehicula enim nibh non velit.
 
@@ -89,5 +91,3 @@ Defines a section that is quoted from another source
 2.  List item two
 3.  List item three
 4.  List item four
-
-<Alert />
