Add a little bit smelly TOC (will upgrade to MDX 2)

--- a/src/docs/getting-started/introduction.mdx
+++ b/src/docs/getting-started/introduction.mdx
@@ -8,14 +8,16 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. In aliquam nibh in faci
 
 Curabitur posuere placerat odio, a suscipit velit consectetur nec. Proin tincidunt gravida risus eu commodo. Vivamus tempus enim ac metus finibus vestibulum. Donec ac sagittis quam, in ullamcorper dolor. Vestibulum rhoncus tempor lacus in commodo. Morbi finibus sapien sed tortor interdum, vitae ornare mi accumsan. Vestibulum rutrum facilisis tincidunt.
 
+## First Heading
+
 <section className="preview">
   <div className="preview__html">
-    <h1>h1: The quick brown fox jumps over the lazy dog</h1>
-    <h2>h2: The quick brown fox jumps over the lazy dog</h2>
-    <h3>h3: The quick brown fox jumps over the lazy dog</h3>
-    <h4>h4: The quick brown fox jumps over the lazy dog</h4>
-    <h5>h5: The quick brown fox jumps over the lazy dog</h5>
-    <h6>h6: The quick brown fox jumps over the lazy dog</h6>
+    <h1 className="preview-heading">h1: The quick brown fox jumps over the lazy dog</h1>
+    <h2 className="preview-heading">h2: The quick brown fox jumps over the lazy dog</h2>
+    <h3 className="preview-heading">h3: The quick brown fox jumps over the lazy dog</h3>
+    <h4 className="preview-heading">h4: The quick brown fox jumps over the lazy dog</h4>
+    <h5 className="preview-heading">h5: The quick brown fox jumps over the lazy dog</h5>
+    <h6 className="preview-heading">h6: The quick brown fox jumps over the lazy dog</h6>
   </div>
 
 ```html
@@ -41,6 +43,8 @@ Definition list division.
 Kitchen Sink
 
 Used in expressions to describe work in which all conceivable (and some inconceivable) sources have been mined. In this case, a bunch of markup.
+
+## Second Heading
 
 aside
 
