--- a/src/docs/getting-started/introduction.mdx
+++ b/src/docs/getting-started/introduction.mdx
@@ -1,83 +1,22 @@
 ---
 title: 'Introduction'
+description: ''
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. In aliquam nibh in facilisis vestibulum. Pellentesque bibendum lorem risus, ut viverra lectus blandit sit amet. Ut rhoncus a dui ac euismod.
+<p className="lead">Spruce is a Sass-based CSS design system, a small framework that helps us get our foundation right and manage multiple projects better.</p>
 
-<Notification status="New" message="The first realase (v0.1.) of Spruce is out."/>
+Spruce is a minimalistic CSS framework. By minimalistic, we mean that it contains only the bare minimum needed for a complex system. Besides the form elements, there aren’t any classical components (there will be components but we will manage them under Spruce UI) in it.
 
-Curabitur posuere placerat odio, a suscipit velit consectetur nec. Proin tincidunt gravida risus eu commodo. Vivamus tempus enim ac metus finibus vestibulum. Donec ac sagittis quam, in ullamcorper dolor. Vestibulum rhoncus tempor lacus in commodo. Morbi finibus sapien sed tortor interdum, vitae ornare mi accumsan. Vestibulum rutrum facilisis tincidunt.
+## Why Make Another CSS Framework?
 
-## First Heading
+As you may know, there are a great many CSS frameworks. Everybody can choose one that suits well their work of style or project requirements. So why make another one? It is certainly not because we can do it better but because we want to do it our own way.
 
-<section className="preview">
-  <div className="preview__html">
-    <h1 className="preview-heading">h1: The quick brown fox jumps over the lazy dog</h1>
-    <h2 className="preview-heading">h2: The quick brown fox jumps over the lazy dog</h2>
-    <h3 className="preview-heading">h3: The quick brown fox jumps over the lazy dog</h3>
-    <h4 className="preview-heading">h4: The quick brown fox jumps over the lazy dog</h4>
-    <h5 className="preview-heading">h5: The quick brown fox jumps over the lazy dog</h5>
-    <h6 className="preview-heading">h6: The quick brown fox jumps over the lazy dog</h6>
-  </div>
+We are sure everybody uses a CSS system, be it a complete framework or a set of utilities. Everyone uses some subset for the new projects as we do. But it is something that will be a burden after a time. So why not outsource it, make it better, and use it through npm?
 
-```html
-<h1>The quick brown fox jumps over the lazy dog</h1>
-<h2>The quick brown fox jumps over the lazy dog</h2>
-<h3>The quick brown fox jumps over the lazy dog</h3>
-<h4>The quick brown fox jumps over the lazy dog</h4>
-<h5>The quick brown fox jumps over the lazy dog</h5>
-<h6>The quick brown fox jumps over the lazy dog</h6>
-```
-</section>
+## It Is Not Just About the CSS Code but About the Point of View
 
-Phasellus vel tortor mi. Vivamus bibendum erat lacus, quis tincidunt urna dictum non. Fusce vel ex feugiat, faucibus lectus sit amet, accumsan lacus. Quisque cursus leo nunc, ut maximus arcu suscipit ut. Nulla laoreet felis mauris, quis facilisis urna aliquet ac. Ut ultricies eros pharetra, elementum urna non, mollis eros. Proin viverra, ipsum a laoreet laoreet, nunc erat pulvinar quam, vel vehicula enim nibh non velit.
+Each system is opinionated but on a different level; this is valid for Spruce too. We don’t want to vote for any particular solution (because there are always more than one), but we will show you what we think is the best right now (for us for sure). We don’t believe there is a good or bad solution, but we can learn from any of them.
 
-> “Two things are infinite: the universe and human stupidity; and I'm not sure about the universe.”
-> 
-> Albert Einstein
+## Can We Leave Out the Grid?
 
-Definition List Title
-
-Definition list division.
-
-Kitchen Sink
-
-Used in expressions to describe work in which all conceivable (and some inconceivable) sources have been mined. In this case, a bunch of markup.
-
-## Second Heading
-
-aside
-
-Defines content aside from the page content
-
-blockquote
-
-Defines a section that is quoted from another source
-
-*   Unordered List item one
-  *   Nested list item
-    *   Level 3, item one
-    *   Level 3, item two
-    *   Level 3, item three
-    *   Level 3, item four
-  *   List item two
-  *   List item three
-  *   List item four
-*   List item two
-*   List item three
-*   List item four
-
-* * *
-
-1.  List item one
-  1.  List item one
-    1.  List item one
-    2.  List item two
-    3.  List item three
-    4.  List item four
-  2.  List item two
-  3.  List item three
-  4.  List item four
-2.  List item two
-3.  List item three
-4.  List item four
+One deficit in this CSS framework is the grid system. Because of the late CSS layout model developments like Flexbox and Grid, we think that it can be eliminated; this doesn’t mean that we won’t show you how to make fantastic layouts with ease, but we try to make it in a modernish way.
