--- a/src/docs/getting-started/introduction.mdx
+++ b/src/docs/getting-started/introduction.mdx
@@ -13,6 +13,21 @@ As you may know, there are a great many CSS frameworks. Everybody can choose one
 
 We are sure everybody uses a CSS system, be it a complete framework or a set of utilities. Everyone uses some subset for the new projects as we do. But it is something that will be a burden after a time. So why not outsource it, make it better, and use it through npm?
 
+## What Spruce Wants to Be?
+
+- It wants to be a  little bit better with each release.
+- It wants to be minimalistic and small, with just the basic necessities for any project.
+- It is trying to be modern. Defining modern is challenging in a constantly changing environment, but the essence here is to follow the new things in CSS.
+- It tries to separate the basic framework from a UI or component library. For UI, we plan to do a separate project named Spruce UI.
+- It tries to be semantic and follow accessibility best practices.
+- It tries to do less (we will see that it actually happens).
+
+## What Spruce Don’t Wants to Be?
+
+- We don’t want to compete or compered with other CSS frameworks. We think almost all of them are great - we learn(ed) a lot from them.
+- Although it has some design opinion, it is not something to help you design. The goal is to give you the correct patterns and a small system.
+- Spruce is just a tool. It can make your decisions, and alone it can’t make your code better.
+
 ## It Is Not Just About the CSS Code but About the Point of View
 
 Each system is opinionated but on a different level; this is valid for Spruce too. We don’t want to vote for any particular solution (because there are always more than one), but we will show you what we think is the best right now (for us for sure). We don’t believe there is a good or bad solution, but we can learn from any of them.
