--- a/src/docs/getting-started/introduction.mdx
+++ b/src/docs/getting-started/introduction.mdx
@@ -3,17 +3,17 @@ title: 'Introduction'
 description: ''
 ---
 
-<p className="lead">Spruce is a Sass-based CSS design system, a small framework that helps us get our foundation right and manage multiple projects better.</p>
+<p className="lead">Spruce is a Sass-based CSS design system, a minimalistic framework that helps us get our foundation right and manage multiple projects better.</p>
 
-Spruce is a minimalistic CSS framework. By minimalistic, we mean that it contains only the bare minimum needed for a complex system. Besides the form elements, there aren’t any classical components (there will be components but we will manage them under Spruce UI) in it.
+By minimalistic, we mean that it contains only the bare minimum needed for a complex system. Besides the form elements, there aren’t any classical components (there will be components but we will manage them under Spruce UI) in it.
 
-## Why Make Another CSS Framework?
+## Why Make Another CSS Framework
 
 As you may know, there are a great many CSS frameworks. Everybody can choose one that suits well their work of style or project requirements. So why make another one? It is certainly not because we can do it better but because we want to do it our own way.
 
-We are sure everybody uses a CSS system, be it a complete framework or a set of utilities. Everyone uses some subset for the new projects as we do. But it is something that will be a burden after a time. So why not outsource it, make it better, and use it through npm?
+We are sure everybody uses a CSS system, be it a complete framework or a set of utilities. Everyone uses some subset for the new projects as we do. But managing it is something that will be a burden after a time. So why not outsource it, make it better, and use it through npm?
 
-## What Spruce Wants to Be?
+## What Spruce Wants to Be
 
 - It wants to be a  little bit better with each release.
 - It wants to be minimalistic and small, with just the basic necessities for any project.
@@ -32,6 +32,6 @@ We are sure everybody uses a CSS system, be it a complete framework or a set of 
 
 Each system is opinionated but on a different level; this is valid for Spruce too. We don’t want to vote for any particular solution (because there are always more than one), but we will show you what we think is the best right now (for us for sure). We don’t believe there is a good or bad solution, but we can learn from any of them.
 
-## Can We Leave Out the Grid?
+## Can Left the Grid Out
 
 One deficit in this CSS framework is the grid system. Because of the late CSS layout model developments like Flexbox and Grid, we think that it can be eliminated; this doesn’t mean that we won’t show you how to make fantastic layouts with ease, but we try to make it in a modernish way.
