--- a/src/docs/getting-started/introduction.mdx
+++ b/src/docs/getting-started/introduction.mdx
@@ -7,6 +7,8 @@ description: ''
 
 By minimalistic, we mean that it contains only the bare minimum needed for a complex system. Besides the form elements, there aren’t any classical components (there will be components but we will manage them under Spruce UI) in it.
 
+<Notification status='new' message='Please, note that Spruce is in beta until the 1.0 release. At this point, we are sure of just a few things. Hopefully, in the next 6-8 months, we can release the first version. Until then, breaking changes, extensive rewrites, 180 degree turns, here we come.' />
+
 ## Why Make Another CSS Framework
 
 As you may know, there are a great many CSS frameworks. Everybody can choose one that suits well their work of style or project requirements. So why make another one? It is certainly not because we can do it better but because we want to do it our own way.
