--- a/src/docs/elements/buttons.mdx
+++ b/src/docs/elements/buttons.mdx
@@ -4,6 +4,66 @@ title: 'Buttons'
 
 <p className="lead">Spruce comes with basic button variations like size, width, color, state. You can also generate your custom color variants.</p>
 
+## Defaults
+
+<Preview>
+  <div class="button-grid">
+    <button type="button" class="btn btn--primary">Primary</button>
+    <a href="https://conedevelopment.com" class="btn btn--secondary">Secondary</a>
+  </div>
+</Preview>
+
+```html
+<button type="button" class="btn btn--primary">Primary</button>
+<a href="https://conedevelopment.com" class="btn btn--secondary">Secondary</a>
+```
+
+<Notification type="correct">Use <code>&lt;a&gt;</code> for links and navigation between pages and <code>&lt;button&gt;</code> for actions like a form sending.</Notification>
+
+## Sizes
+
+<Preview>
+  <div class="button-grid">
+    <button type="button" class="btn btn--primary btn--sm">Small</button>
+    <button type="button" class="btn btn--primary">Medium</button>
+    <button type="button" class="btn btn--primary btn--lg">Large</button>
+  </div>
+</Preview>
+
+```html
+<button type="button" class="btn btn--primary btn--sm">Small</button>
+<button type="button" class="btn btn--primary">Medium</button>
+<button type="button" class="btn btn--primary btn--lg">Large</button>
+```
+
+## Block Buttons
+
+<Preview>
+  <div class="button-grid button-grid--stacked">
+    <button type="button" class="btn btn--primary btn--block">Block button</button>
+    <button type="button" class="btn btn--secondary btn--block">Block button</button>
+  </div>
+</Preview>
+
+```html
+<button type="button" class="btn btn--primary btn--block">Block button</button>
+<button type="button" class="btn btn--secondary btn--block">Block button</button>
+```
+
+## Add Icon
+
+<Preview>
+  <div class="button-grid button-grid--stacked">
+    <button type="button" class="btn btn--primary">Read more</button>
+    <button type="button" class="btn btn--secondary">Block button</button>
+  </div>
+</Preview>
+
+```html
+<button type="button" class="btn btn--primary">Read more</button>
+<button type="button" class="btn btn--secondary">Block button</button>
+```
+
 ## Configurable Variables
 
 There are some defaults variables that you can configure to customize the button's look.
@@ -33,36 +93,6 @@ $colors: (
     secondary-foreground: hsl(350, 100%, 20%)
   )
 )
-```
-
-## Defaults
-
-<Preview>
-  <div class="button-grid">
-    <button type="button" class="btn btn--primary">Primary</button>
-    <button type="button" class="btn btn--secondary">Secondary</button>
-  </div>
-</Preview>
-
-```html
-<button type="button" class="btn btn--primary">Primary</button>
-<button type="button" class="btn btn--secondary">Secondary</button>
-```
-
-## Sizes
-
-<Preview>
-  <div class="button-grid">
-    <button type="button" class="btn btn--primary btn--sm">Small</button>
-    <button type="button" class="btn btn--primary">Medium</button>
-    <button type="button" class="btn btn--primary btn--lg">Large</button>
-  </div>
-</Preview>
-
-```html
-<button type="button" class="btn btn--primary btn--sm">Small</button>
-<button type="button" class="btn btn--primary">Medium</button>
-<button type="button" class="btn btn--primary btn--lg">Large</button>
 ```
 
 ## Add Custom Button Variant
