--- a/src/docs/elements/buttons.mdx
+++ b/src/docs/elements/buttons.mdx
@@ -66,7 +66,7 @@ The disabled attribute doesn't work on links, so you have to use the ```btn--dis
 
 ## Block Buttons
 
-To display a block button, you can use the btn--block modifier class.
+To display a block button, you can use the ```btn--block``` modifier class.
 
 <Preview>
   <div class="button-grid button-grid--stacked">
