--- a/src/docs/elements/tables.mdx
+++ b/src/docs/elements/tables.mdx
@@ -2,37 +2,36 @@
 title: 'Tables'
 ---
 
+<p class="lead">Spruce ships with some basic table styling targeted only with classes to opt-in.</p>
+
+## Default Styles
+
+Use the ```table``` class on an HTML ```<table>``` element to use the default styling.
+
 <Preview>
   <div class="table-responsive">
-    <table class="table table--striped table--dark table--hover">
-      <caption>Tables can have captions now.</caption>
+    <table class="table">
+      <caption>A generic introduction to the table.</caption>
       <thead>
         <tr>
-          <th scope="col">Person</th>
+          <th scope="col">ID</th>
+          <th scope="col">Name</th>
           <th scope="col">Number</th>
-          <th scope="col">Third&nbsp;Column</th>
+          <th scope="col">Block of Text</th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <td>Someone Lastname</td>
+          <th scope="row">1</th>
+          <td>John&nbsp;Doe</td>
           <td>900</td>
           <td>Nullam quis risus eget urna mollis ornare vel eu leo.</td>
         </tr>
         <tr>
-          <td><a href="#">Person Name</a></td>
+          <th scope="row">2</th>
+          <td><a href="#">Jane&nbsp;Doe</a></td>
           <td>1200</td>
           <td>Vestibulum id ligula porta felis euismod semper. Donec ullamcorper nulla non metus auctor fringilla.</td>
-        </tr>
-        <tr>
-          <td>Another Person</td>
-          <td>1500</td>
-          <td>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Nullam id dolor id nibh ultricies vehicula ut id elit.</td>
-        </tr>
-        <tr>
-          <td>Last One</td>
-          <td>2800</td>
-          <td>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</td>
         </tr>
       </tbody>
     </table>
@@ -40,38 +39,25 @@ title: 'Tables'
 </Preview>
 
 ```html
-<div class="table-responsive">
-    <table class="table table--striped table--dark table--hover">
-      <caption>Tables can have captions now.</caption>
-      <thead>
-        <tr>
-          <th scope="col">Person</th>
-          <th scope="col">Number</th>
-          <th scope="col">Third&nbsp;Column</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Someone Lastname</td>
-          <td>900</td>
-          <td>Nullam quis risus eget urna mollis ornare vel eu leo.</td>
-        </tr>
-        <tr>
-          <td><a href="#">Person Name</a></td>
-          <td>1200</td>
-          <td>Vestibulum id ligula porta felis euismod semper. Donec ullamcorper nulla non metus auctor fringilla.</td>
-        </tr>
-        <tr>
-          <td>Another Person</td>
-          <td>1500</td>
-          <td>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Nullam id dolor id nibh ultricies vehicula ut id elit.</td>
-        </tr>
-        <tr>
-          <td>Last One</td>
-          <td>2800</td>
-          <td>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
+<table class="table">
+  <caption>A generic introduction to the table.</caption>
+  <thead>
+    <tr>
+      <th scope="col">ID</th>
+      <th scope="col">Name</th>
+      <th scope="col">Number</th>
+      <th scope="col">Block of Text</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>John Doe</td>
+      <td>900</td>
+      <td>Nullam quis risus eget urna mollis ornare vel eu leo.</td>
+    </tr>
+  </tbody>
+</table>
 ```
+
+https://developer.mozilla.org/en-US/docs/Web/HTML/Element/th#attr-scope
