--- a/src/docs/elements/tables.mdx
+++ b/src/docs/elements/tables.mdx
@@ -4,38 +4,36 @@ title: 'Tables'
 
 <p class="lead">Spruce ships with some basic table styling targeted only with classes to opt-in.</p>
 
-## Default Styles
+## Default Style
 
 Use the ```table``` class on an HTML ```<table>``` element to use the default styling.
 
 <Preview>
-  <div class="table-responsive">
-    <table class="table">
-      <caption>A generic introduction to the table.</caption>
-      <thead>
-        <tr>
-          <th scope="col">ID</th>
-          <th scope="col">Name</th>
-          <th scope="col">Number</th>
-          <th scope="col">Block of Text</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <th scope="row">1</th>
-          <td>John&nbsp;Doe</td>
-          <td>900</td>
-          <td>Nullam quis risus eget urna mollis ornare vel eu leo.</td>
-        </tr>
-        <tr>
-          <th scope="row">2</th>
-          <td><a href="#">Jane&nbsp;Doe</a></td>
-          <td>1200</td>
-          <td>Vestibulum id ligula porta felis euismod semper. Donec ullamcorper nulla non metus auctor fringilla.</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
+  <table class="table">
+    <caption>A generic introduction to the table.</caption>
+    <thead>
+      <tr>
+        <th scope="col">ID</th>
+        <th scope="col">Name</th>
+        <th scope="col">Number</th>
+        <th scope="col">Block of Text</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row">1</th>
+        <td>John&nbsp;Doe</td>
+        <td>900</td>
+        <td>Nullam quis risus eget urna mollis ornare vel eu leo.</td>
+      </tr>
+      <tr>
+        <th scope="row">2</th>
+        <td><a href="#">Jane&nbsp;Doe</a></td>
+        <td>1200</td>
+        <td>Vestibulum id ligula porta felis euismod semper. Donec ullamcorper nulla non metus auctor fringilla.</td>
+      </tr>
+    </tbody>
+  </table>
 </Preview>
 
 ```html
@@ -60,4 +58,59 @@ Use the ```table``` class on an HTML ```<table>``` element to use the default st
 </table>
 ```
 
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/th#attr-scope
+<Notification>Use <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/th#attr-scope">scope attribute</a> to define which header relates with which table cells.</Notification>
+
+## Striped Style
+
+Use the ```table``` class on an HTML ```<table>``` element to use the default styling.
+
+<Preview>
+  <table className="table table--striped table--hover">
+    <thead>
+      <tr>
+        <th scope="col">ID</th>
+        <th scope="col">Name</th>
+        <th scope="col">Number</th>
+        <th scope="col">Block of Text</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row">1</th>
+        <td>John&nbsp;Doe</td>
+        <td>900</td>
+        <td>Nullam quis risus eget urna mollis ornare vel eu leo.</td>
+      </tr>
+      <tr>
+        <th scope="row">2</th>
+        <td><a href="#">Jane&nbsp;Doe</a></td>
+        <td>1200</td>
+        <td>Vestibulum id ligula porta felis euismod semper. Donec ullamcorper nulla non metus auctor fringilla.</td>
+      </tr>
+      <tr>
+        <th scope="row">3</th>
+        <td>Jim&nbsp;Doe</td>
+        <td>1200</td>
+        <td>Vestibulum id ligula porta felis euismod semper. Donec ullamcorper nulla non metus auctor fringilla.</td>
+      </tr>
+    </tbody>
+  </table>
+</Preview>
+
+```html
+<table class="table table--striped">
+  <thead>
+    <tr>
+      <th scope="col">ID</th>
+      <th scope="col">Name</th>
+      <th scope="col">Number</th>
+      <th scope="col">Block of Text</th>
+    </tr>
+  </thead>
+  <tbody>
+    ...
+  </tbody>
+</table>
+```
+
+## Responsive, Scrollable Tables
