--- a/src/docs/elements/typography.mdx
+++ b/src/docs/elements/typography.mdx
@@ -60,7 +60,9 @@ For the detailed function, please see the [_font-size.scss file](https://github.
 
 ## Lead
 
-
+<Preview>
+  <p class="lead">Spruce is a Sass-based CSS design system, a minimalistic framework that helps us get our foundation right and manage multiple projects better.</p>
+</Preview>
 
 ## Blockquote
 
