--- a/src/docs/getting-started/introduction.mdx
+++ b/src/docs/getting-started/introduction.mdx
@@ -37,3 +37,8 @@ Each system is opinionated but on a different level; this is valid for Spruce to
 ## Can Left the Grid Out
 
 One deficit in this CSS framework is the grid system. Because of the late CSS layout model developments like Flexbox and Grid, we think that it can be eliminated; this doesn’t mean that we won’t show you how to make fantastic layouts with ease, but we try to make it in a modernish way.
+
+
+## Color Purple
+
+Choosing a “brand” color is hard because all of them are taken. After we realized that all of our stuff uses blue, we made the boldest choice and picked purple. We swear we didn't copy the color from Boostrap, unlike many other things. :|
